--- a/frontend/src/components/Reviews/ReviewsIndex/ReviewsIndex.css
+++ b/frontend/src/components/Reviews/ReviewsIndex/ReviewsIndex.css
@@ -1,5 +1,14 @@
 
+#containerRI{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    width:100%;
+    height:100%;
+    background-color: var(--one);
 
+}
 #reviewsIndexContainer {
     display: flex;
     flex-direction: row;
@@ -7,14 +16,13 @@
     align-items: start;
     flex-wrap: wrap;
     width:100%;
-
-    /* background-color: green; */
 }
 
 #noReviews {
     justify-content: center;
     align-items: center;
     margin-top: 30px;
-    color: darkblue;
+    margin-bottom:40px;
+    color: white;
     font-style: italic;
 }
