--- a/frontend/src/components/Helpers/Caroursel/Carousel.css
+++ b/frontend/src/components/Helpers/Caroursel/Carousel.css
@@ -43,17 +43,18 @@
   .slider {
     position: relative;
     width: 100vw;
-    height: 50vh;
+    height: 100vw;
   }
   
   .slide {
+    padding-top: var(--nbh);
     position: absolute;
     top: 0;
     left: 0;
     opacity: 0;
     transition: opacity 1s ease-in-out;
     width: 100vw;
-    height: 70vh;
+    height: 100vw;
   }
   
   .slide.active {
