--- a/frontend/src/components/Navigation/NavBar/NavBar.css
+++ b/frontend/src/components/Navigation/NavBar/NavBar.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: space-between;
 
-    /* background-color: bisque; */
+    background-color: var(--one);
    
 }
 #navContainer.index {
@@ -47,10 +47,8 @@ img {
 
 
 #searchBarContainer {
-    /* background-color: green; */
     background-color: transparent;
     flex: 1;
-
 }
 
 #buttonsContainer {
