--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -33,17 +33,25 @@
     width:100%;
     height:100%;
 }
-.searchButton {
+.outerSB {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+    
+   
+}
+.innerSB {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 40px;
     width: 40px;
-    background-color: #5cb9ff;;
+    background-color: var(--two);
     color: white;
     border-radius: 0px 7px 7px 0px;
-}
 
+}
 .SBInputWrap {
     width: 100%;
     height: 100%;
