--- a/frontend/src/components/Auth/SignupForm/SignupForm.css
+++ b/frontend/src/components/Auth/SignupForm/SignupForm.css
@@ -1,15 +1,14 @@
 
 
-#signupFormContainer {
+/* #signupFormContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 75px 300px 300px 300px;
-    width: 450px;
+    width: 450px; */
     /* background-color: lightblue; */
-}
 
-h2 {
+/* h2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,16 +18,16 @@ h2 {
     font-weight: bolder;
     color: #5cb9ff;
     background-color: white;  
-}
-f#inputForm {
+} */
+/* f#inputForm {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     width: 400px;
     /* background-color: pink; */
-    margin: 20px 0px 20px 0px;
+    /* margin: 20px 0px 20px 0px; */
    
-}
+
 
 
 
@@ -41,12 +40,12 @@ f#inputForm {
 input:not(#submit) {
     padding-left: 20px;
 } */
-
+/* 
 #submit {
     background-color: #5cb9ff;
     color: white;
     font-weight:bolder;
-}
+} */
 
 #ulSignUp {
     color: red;
